[package]
name = "cure_asn1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
hex = "0.4.3"
base64 = "0.21.4"
rand = "0.8"
serde = { version = "1.0.*", default-features = true, features=["serde_derive"] }
serde_json="1.0"
minidom = "0.16.0"
#openssl = "0.10.64"
xml-rs = "0.8"
sha2 = "0.9" 
regex = "1"
quick-xml = "0.37.2"
rayon = "1.7"
chrono = "0.4.23"
prost = {version="0.13.5", optional=true}
prost-derive = {version="0.13.5", optional=true}
prost-types = {version="0.13.5", optional=true}
memchr = "2.7.4"
twoway = "0.2.2"



[features]
cached_keys = []

default = [] 

# Enable protobuf-based model generation
proto = ["prost", "prost-build", "prost-derive", "prost-types"]
research = []

[build-dependencies]
# codegen only needed at build time if the feature is active
prost-build = { version = "0.13", optional = true }
