[package]
name = "cure_pp"
version = "0.1.0"
edition = "2024"

[dependencies]
cure_asn1 = {path="../cure_asn1/"}
rand = "0.8.5"
serde = { version = "1.0.*", default-features = false }
serde_json="1.0"
chrono = "0.4.23"
hex = "0.4.3"
#openssl = {version ="0.10.69", default-features = false}
base64 = "0.20.0"
#sha256 = "1.1.3"
sha2 = "0.9" 
rayon = "1.7"
p256 = "0.13.2"
uuid =  {version = "0.8.2", features = ["serde", "v4"]}
rand_distr = "0.4"
rsa = { version = "0.9", features= ["sha2"]}
sha1 = "0.10"
prost = "0.13.5"
prost-derive = "0.13.5"
prost-types = "0.13.5"

[features]
fuzzing = []
roa_proto = []
no_crl = []
no_roa_sig = []
rrdp_proto = []
no_ee = []
no_cached_keys = []
research = []
